--- a/index.html
+++ b/index.html
@@ -2,36 +2,32 @@
 <html lang="en" class="h-100" data-bs-theme="auto">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="" />
-    <meta
-      name="author"
-      content="Perseonn Balthasaar"
-    />
+    <meta name="viewport"    content="width=device-width, initial-scale=1" />
+    <meta name="author"      content="Perseonn Balthasaar" />
+
     <title>PS Enterprise Help Center</title>
-    <link rel="canonical" href="https://psegameshop.github.io/help/" />
+    <link rel="canonical"  href="https://psegameshop.github.io/help/" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-
 
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <link href="./assets/custom.css" rel="stylesheet" />
     <meta name="theme-color" content="#712cf9" />
-
     <link rel="icon" type="image/png" href="favicon.png">
-    <meta name="description" content="PSe Help Center and FAQ page. Find answers to common questions about PS Enterprise services and support!">
-    <meta property="og:title" content="PS Enterprise Help Center">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://psegameshop.github.io/help/assets/img/hero.avif">
-    <meta property="og:url" content="https://psegameshop.github.io/help/">
-    <meta property="og:description" content="PSe Help Center and FAQ page. Find answers to common questions about PS Enterprise services and support!">
 
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="PS Enterprise Help Center">
+    <meta name="description"         content="PSe Help Center and FAQ page. Find answers to common questions about PS Enterprise services and support!">
+    <meta property="og:title"        content="PS Enterprise Help Center">
+    <meta property="og:type"         content="website">
+    <meta property="og:image"        content="https://psegameshop.github.io/help/assets/img/help-hero-banner.jpg">
+    <meta property="og:url"          content="https://psegameshop.github.io/help/">
+    <meta property="og:description"  content="PSe Help Center and FAQ page. Find answers to common questions about PS Enterprise services and support!">
+
+    <meta name="twitter:card"        content="summary_large_image">
+    <meta name="twitter:title"       content="PS Enterprise Help Center">
     <meta name="twitter:description" content="PSe Help Center and FAQ page. Find answers to common questions about PS Enterprise services and support!">
-    <meta name="twitter:image" content="https://psegameshop.github.io/help/assets/img/hero.avif">
+    <meta name="twitter:image"       content="https://psegameshop.github.io/help/assets/img/help-hero-banner.jpg">
 
 </head>
 <body data-bs-spy="scroll" data-bs-target="#navbarNav" data-bs-offset="80" tabindex="0">
