Now with more spinning

--- a/index.html
+++ b/index.html
@@ -63,12 +63,24 @@
 </nav>
 
 <!-- Home Section -->
-<section id="home" class="splash-border">
-  <div class="cover-section">
-  <div class="container text-center pt-4 pb-4">
-    <h1 class="display-3 fw-bold">Kami Siap Membantu!</h1>
-    <p class="lead">Perlu bantuan? Tim support PS Enterpise siap membantu gamers!</p>
-  </div>
+<section id="home" class="splash-border position-relative overflow-hidden">
+  <!-- Background banner -->
+  <div class="cover-bg"></div>
+
+  <!-- Spinning accents -->
+  <div class="spin spin-1"></div>
+  <div class="spin spin-2"></div>
+  <div class="spin spin-3"></div>
+  <div class="spin spin-4"></div>
+  <div class="spin spin-5"></div>
+
+  <!-- Foreground character -->
+  <div class="cover-foreground">
+    <!-- Text content -->
+    <div class="container text-center pt-4 pb-4">
+      <h1 class="display-3 fw-bold">Kami Siap Membantu!</h1>
+      <p class="lead">Perlu bantuan? Tim support PS Enterpise siap membantu gamers!</p>
+    </div>
   </div>
 </section>
 
