PlayStation and General Guides Update

--- a/guide.html
+++ b/guide.html
@@ -51,7 +51,7 @@
 <!-- Guide Body Section -->
 <section id="guide" class="splash-border">
   <div class="container">
-     <div id="guide-container" class="guide-container text-body"></div>
+     <div id="guide-container" class="guide-container text-body"> TEST</div>
      <script>
     // --- Fetch and display guide dynamically ---
     async function loadGuide() {
@@ -80,6 +80,8 @@
 
     loadGuide();
   </script>
+  <div class="guide-post-content">
+  <h3>Kalau mau bertanya<sup>2</sup>, bagaimana min?</h3><p>Gamers bisa join ke Discord Server PSe untuk bisa terhubung dengan para mimin yang akan menjawab pertanyaan gamers!</p><a href='https://discord.gg/PWBq8kp3MK' class='btn btn-lg btn-accent w-100'><i class='bi bi-discord'></i> Discord Server PSe</a></div>
   </div>
 </section>
 
