--- a/index.html
+++ b/index.html
@@ -109,32 +109,46 @@
     <h2 class="accented-title text-center pt-4 pb-4"><span class="accent-text">Panduan</span></h2>
     <div class="row justify-content-center">
       <div class="col-md-11">
+        <div class="card pse mb-4">
+          <div class="card-body">
+            <h5 class="card-title">Umum</h5>
+            <div class="row justify-content-center">
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=rating" class="btn btn-lg btn-accent w-100"><i class="bi bi-globe"></i> Perbedaan Rating Game</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=regional" class="btn btn-lg btn-accent w-100"><i class="bi bi-globe"></i> Perbedaan Region Game</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=gulikit-kingkong-3-max" class="btn btn-lg btn-accent w-100"><i class="bi bi-journal-text"></i> Gulikit Kingkong 3 Max</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=iine-pocket-8bitdo-zero-2" class="btn btn-lg btn-accent w-100"><i class="bi bi-journal-text"></i> IINE Pocket dan 8bitdo Zero 2</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=plaud-note-ai" class="btn btn-lg btn-accent w-100"><i class="bi bi-journal-text"></i> Plaud Note AI</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=meta-ray-ban-ai-glasses" class="btn btn-lg btn-accent w-100"><i class="bi bi-journal-text"></i> Meta RayBan AI Glasses</a></div>
+             </div>
+          </div>
+        </div>
         <div class="card switch mb-4">
           <div class="card-body">
             <h5 class="card-title">Switch</h5>
-              <div class="row justify-content-center">
-                <div class="col-md-6 mb-4"><a href="guide.html?guide=mario-kart-world-hk-redeem" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Switch 2 - Redeem Mario Kart HK</a></div>
-                <div class="col-md-6 mb-4"><a href="guide.html?guide=nintendo-account-setup" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Nintendo Account</a></div>
-                <div class="col-md-6 mb-4"><a href="guide.html?guide=nintendo-eshop-code-redeem" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> eShop Redeem Code</a></div>
-                <div class="col-md-6 mb-4"><a href="guide.html?guide=joy-con-strap" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Joy-Con &amp; Strap</a></div>
-                <div class="col-md-6 mb-4"><a href="guide.html?guide=joy-con-multiplayer-setup" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Joy-Con Multiplayer Setup</a></div>
-                <div class="col-md-6 mb-4"><a href="guide.html?guide=dock-setup" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Dock Setup</a></div>
-                <div class="col-md-6 mb-4"><a href="guide.html?guide=switch-cfw-info" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Custom Firmware Info</a></div>
-                <div class="col-md-6 mb-4"><a href="guide.html?guide=switch-cfw-game-install" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> CFW Game Installation</a></div>
-                <div class="col-md-6 mb-4"><a href="guide.html?guide=switch-cfw-cheat-install" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> CFW Download &amp; Install Cheat</a></div>
-                <div class="col-md-6 mb-4"><a href="guide.html?guide=tinfoil-shop-setup" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> CFW Cara Setup Tinfoil Shop</a></div>
-              </div>
+            <div class="row justify-content-center">
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=mario-kart-world-hk-redeem" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Switch 2 - Redeem Mario Kart HK</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=nintendo-account-setup" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Nintendo Account</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=nintendo-eshop-code-redeem" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> eShop Redeem Code</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=joy-con-strap" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Joy-Con &amp; Strap</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=joy-con-multiplayer-setup" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Joy-Con Multiplayer Setup</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=dock-setup" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Dock Setup</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=switch-cfw-info" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Custom Firmware Info</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=switch-cfw-game-install" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> CFW Game Installation</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=switch-cfw-cheat-install" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> CFW Download &amp; Install Cheat</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=tinfoil-shop-setup" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> CFW Cara Setup Tinfoil Shop</a></div>
+            </div>
           </div>
         </div>
         <div class="card playstation mb-4">
           <div class="card-body">
             <h5 class="card-title">PlayStation</h5>
             <div class="row justify-content-center">
-                <div class="col-md-6 mb-4"><a href="https://www.psegameshop.com/tutorial-cara-download-game-gratis-di-ps-store/" class="btn btn-lg btn-accent w-100"><img src="./assets/img/playstation-logo-white.svg" alt="PlayStation Logo" class="console-icon"> Download Game Gratis di PSN</a></div>
-                <div class="col-md-6 mb-4"><a href="https://www.psegameshop.com/cara-membuat-akun-region-2-jepang-di-playstation-5/" class="btn btn-lg btn-accent w-100"><img src="./assets/img/playstation-logo-white.svg" alt="PlayStation Logo" class="console-icon"> PSN Account</a></div>
-                <div class="col-md-6 mb-4"><a href="https://www.psegameshop.com/tutorial-cara-redeem-kode-playstation-network/" class="btn btn-lg btn-accent w-100"><img src="./assets/img/playstation-logo-white.svg" alt="PlayStation Logo" class="console-icon"> PSN Redeem Code</a></div>
-                <div class="col-md-6 mb-4"><a href="https://www.psegameshop.com/perbedaan-region-dalam-game-ps4-ps5/" class="btn btn-lg btn-accent w-100"><img src="./assets/img/playstation-logo-white.svg" alt="PlayStation Logo" class="console-icon"> Perbedaan Region</a></div>
-                <div class="col-md-6 mb-4"><a href="https://www.psegameshop.com/playstation-store-refund-faq/" class="btn btn-lg btn-accent w-100"><img src="./assets/img/playstation-logo-white.svg" alt="PlayStation Logo" class="console-icon"> Cara Refund di PSN</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=ps-store-free-games" class="btn btn-lg btn-accent w-100"><img src="./assets/img/playstation-logo-white.svg" alt="PlayStation Logo" class="console-icon"> Game Gratis di PS Store</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=ps-store-refund" class="btn btn-lg btn-accent w-100"><img src="./assets/img/playstation-logo-white.svg" alt="PlayStation Logo" class="console-icon"> Cara Refund di PS Store</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=psn-account" class="btn btn-lg btn-accent w-100"><img src="./assets/img/playstation-logo-white.svg" alt="PlayStation Logo" class="console-icon"> Buat Akun PSN via PlayStation 5</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=psn-account-web" class="btn btn-lg btn-accent w-100"><img src="./assets/img/playstation-logo-white.svg" alt="PlayStation Logo" class="console-icon"> Buat Akun PSN Jepang via Web</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=ps-store-code" class="btn btn-lg btn-accent w-100"><img src="./assets/img/playstation-logo-white.svg" alt="PlayStation Logo" class="console-icon"> Redeem Kode PS Store via PlayStation 5</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=ps-store-code-web" class="btn btn-lg btn-accent w-100"><img src="./assets/img/playstation-logo-white.svg" alt="PlayStation Logo" class="console-icon"> Redeem Kode PS Store via Web</a></div>
              </div>
           </div>
         </div>
@@ -163,18 +177,6 @@
             <div class="row justify-content-center">
                 <div class="col-md-6 mb-4"><a href="https://www.psegameshop.com/tutorial-cara-setup-fire-tv-stick/" class="btn btn-lg btn-accent w-100"><img src="./assets/img/amazon-logo-white.svg" alt="Amazon Logo" class="console-icon"> Pengaturan Fire TV</a></div>
                 <div class="col-md-6 mb-4"><a href="https://www.psegameshop.com/tutorial-kirim-buku-pdf-epub-ke-amazon-kindle/" class="btn btn-lg btn-accent w-100"><img src="./assets/img/amazon-logo-white.svg" alt="Amazon Logo" class="console-icon"> Kirim Buku ke Kindle</a></div>
-             </div>
-          </div>
-        </div>
-        <div class="card pse mb-4">
-          <div class="card-body">
-            <h5 class="card-title">Lainnya</h5>
-            <div class="row justify-content-center">
-                <div class="col-md-6 mb-4"><a href="https://www.psegameshop.com/tutorial-gulikit-kingkong-3-max/" class="btn btn-lg btn-accent w-100"><i class="bi bi-journal-text"></i> Gulikit Kingkong 3 Max</a></div>
-                <div class="col-md-6 mb-4"><a href="https://www.psegameshop.com/tutorial-iine-pocket-setup/" class="btn btn-lg btn-accent w-100"><i class="bi bi-journal-text"></i> IINE Pocket</a></div>
-                <div class="col-md-6 mb-4"><a href="https://www.psegameshop.com/tutorial-8bitdo-zero-2-setup/" class="btn btn-lg btn-accent w-100"><i class="bi bi-journal-text"></i> 8bitdo Zero 2</a></div>
-                <div class="col-md-6 mb-4"><a href="https://www.psegameshop.com/tutorial-cara-menggunakan-plaud-note-ai/" class="btn btn-lg btn-accent w-100"><i class="bi bi-journal-text"></i> Plaud Note AI</a></div>
-                <div class="col-md-6 mb-4"><a href="https://www.psegameshop.com/tutorial-ray-ban-ai-glasses/" class="btn btn-lg btn-accent w-100"><i class="bi bi-journal-text"></i> Meta RayBan AI Glasses</a></div>
              </div>
           </div>
         </div>
