--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
           <div class="card-body">
             <h5 class="card-title">Xbox</h5>
             <div class="row justify-content-center">
-                <div class="col-md-6 mb-4"><a href="https://www.psegameshop.com/tutorial-cara-buat-akun-xbox-microsoft/" class="btn btn-lg btn-accent w-100"><img src="./assets/img/xbox-logo-white.svg" alt="Xbox Logo" class="console-icon"> Xbox Account</a></div>
-                <div class="col-md-6 mb-4"><a href="https://www.psegameshop.com/tutorial-cara-redeem-kode-game-pass-dan-giftcard-xbox/" class="btn btn-lg btn-accent w-100"><img src="./assets/img/xbox-logo-white.svg" alt="Xbox Logo" class="console-icon"> Xbox Redeem Code</a></div>
-                <div class="col-md-6 mb-4"><a href="https://www.psegameshop.com/tutorial-cara-pairing-controller-xbox/" class="btn btn-lg btn-accent w-100"><img src="./assets/img/xbox-logo-white.svg" alt="Xbox Logo" class="console-icon"> Pairing Controller</a></div>
+                <div class="col-md-6 mb-4"><a href="guide.html?guide=xbox-account" class="btn btn-lg btn-accent w-100"><img src="./assets/img/xbox-logo-white.svg" alt="Xbox Logo" class="console-icon"> Buat Akun Xbox</a></div>
+                <div class="col-md-6 mb-4"><a href="guide.html?guide=xbox-redeem" class="btn btn-lg btn-accent w-100"><img src="./assets/img/xbox-logo-white.svg" alt="Xbox Logo" class="console-icon"> Redeem Kode Xbox via Web</a></div>
+                <div class="col-md-6 mb-4"><a href="guide.html?guide=xbox-controller" class="btn btn-lg btn-accent w-100"><img src="./assets/img/xbox-logo-white.svg" alt="Xbox Logo" class="console-icon"> Xbox Controller Setup</a></div>
              </div>
           </div>
         </div>
@@ -166,8 +166,8 @@
           <div class="card-body">
             <h5 class="card-title">Steam Deck &amp; PC</h5>
             <div class="row justify-content-center">
-                <div class="col-md-6 mb-4"><a href="https://www.psegameshop.com/f-a-q-steam-deck/" class="btn btn-lg btn-accent w-100"><img src="./assets/img/steam-logo-white.svg" alt="Steam Logo" class="console-icon"> Tentang Steam Deck</a></div>
-                <div class="col-md-6 mb-4"><a href="https://www.psegameshop.com/f-a-q-handheld-pc/" class="btn btn-lg btn-accent w-100"><img src="./assets/img/windows-logo-white.svg" alt="Windows Logo" class="console-icon"> Tentang PC Handheld</a></div>
+                <div class="col-md-6 mb-4"><a href="guide.html?guide=steam-deck-info" class="btn btn-lg btn-accent w-100"><img src="./assets/img/steam-logo-white.svg" alt="Steam Logo" class="console-icon"> Tentang Steam Deck</a></div>
+                <div class="col-md-6 mb-4"><a href="guide.html?guide=handheld-pc-info" class="btn btn-lg btn-accent w-100"><img src="./assets/img/windows-logo-white.svg" alt="Windows Logo" class="console-icon"> Tentang PC Handheld</a></div>
              </div>
           </div>
         </div>
@@ -175,8 +175,8 @@
           <div class="card-body">
             <h5 class="card-title">Amazon</h5>
             <div class="row justify-content-center">
-                <div class="col-md-6 mb-4"><a href="https://www.psegameshop.com/tutorial-cara-setup-fire-tv-stick/" class="btn btn-lg btn-accent w-100"><img src="./assets/img/amazon-logo-white.svg" alt="Amazon Logo" class="console-icon"> Pengaturan Fire TV</a></div>
-                <div class="col-md-6 mb-4"><a href="https://www.psegameshop.com/tutorial-kirim-buku-pdf-epub-ke-amazon-kindle/" class="btn btn-lg btn-accent w-100"><img src="./assets/img/amazon-logo-white.svg" alt="Amazon Logo" class="console-icon"> Kirim Buku ke Kindle</a></div>
+                <div class="col-md-6 mb-4"><a href="guide.html?guide=fire-tv-setup" class="btn btn-lg btn-accent w-100"><img src="./assets/img/amazon-logo-white.svg" alt="Amazon Logo" class="console-icon"> Pengaturan Fire TV</a></div>
+                <div class="col-md-6 mb-4"><a href="guide.html?guide=kindle-book" class="btn btn-lg btn-accent w-100"><img src="./assets/img/amazon-logo-white.svg" alt="Amazon Logo" class="console-icon"> Kirim Buku ke Kindle</a></div>
              </div>
           </div>
         </div>
