Index page margin update

--- a/index.html
+++ b/index.html
@@ -87,26 +87,30 @@
 <!-- Help Section -->
 <section id="help" class="splash-border">
   <div class="container text-center pb-4">
-    <h2 class="accented-title text-center pt-4 pb-4"><span class="accent-text">Bantuan</span></h2>
-    <div class="row justify-content-center">
-      <div class="col-md-6 mb-4"><a href="tel:+6287782217678" class="btn btn-lg btn-accent w-100"><i class="bi bi-telephone"></i> Telepon Toko Offline</a></div>
-      <div class="col-md-6 mb-4"><a href="https://wa.me/6287782217678" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> WA Toko Offline</a></div>
-      <div class="col-md-6 mb-4"><a href="https://wa.me/6281380000246" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> Sales</a></div>
-      <div class="col-md-6 mb-4"><a href="https://wa.me/6287782217678" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> Tukar Tambah</a></div>
-      <div class="col-md-6 mb-4"><a href="https://wa.me/62818835270" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> After Sales dan Garansi</a></div>
-      <div class="col-md-6 mb-4"><a href="https://wa.me/6281214000838" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> Service</a></div>
-      <div class="col-md-6 mb-4"><a href="https://wa.me/6281393488989" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> Admin psegameshop.com</a></div>
-      <div class="col-md-6 mb-4"><a href="https://wa.me/62818633370" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> Admin Tokopedia</a></div>
-      <div class="col-md-6 mb-4"><a href="https://discord.gg/PWBq8kp3MK" class="btn btn-lg btn-accent w-100"><i class="bi bi-discord"></i> Discord</a></div>
-      <div class="col-md-6 mb-4"><a href="mailto:lilis.pse@gmail.com" class="btn btn-lg btn-accent w-100"><i class="bi bi-envelope"></i> Umpan Balik</a></div>
-    </div>
-  </div>
-</section>
-
-<!-- Guide Section -->
+    <div class="row">
+      <div class="col-md-11 mx-auto">
+        <h2 class="accented-title text-center pt-5 pb-4"><span class="accent-text">Bantuan</span></h2>
+        <div class="row justify-content-center">
+          <div class="col-md-6 mb-4"><a href="tel:+6287782217678" class="btn btn-lg btn-accent w-100"><i class="bi bi-telephone"></i> Telepon Toko Offline</a></div>
+          <div class="col-md-6 mb-4"><a href="https://wa.me/6287782217678" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> WA Toko Offline</a></div>
+          <div class="col-md-6 mb-4"><a href="https://wa.me/6281380000246" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> Sales</a></div>
+          <div class="col-md-6 mb-4"><a href="https://wa.me/6287782217678" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> Tukar Tambah</a></div>
+          <div class="col-md-6 mb-4"><a href="https://wa.me/62818835270" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> After Sales dan Garansi</a></div>
+          <div class="col-md-6 mb-4"><a href="https://wa.me/6281214000838" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> Service</a></div>
+          <div class="col-md-6 mb-4"><a href="https://wa.me/6281393488989" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> Admin psegameshop.com</a></div>
+          <div class="col-md-6 mb-4"><a href="https://wa.me/62818633370" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> Admin Tokopedia</a></div>
+          <div class="col-md-6 mb-4"><a href="https://discord.gg/PWBq8kp3MK" class="btn btn-lg btn-accent w-100"><i class="bi bi-discord"></i> Discord</a></div>
+          <div class="col-md-6 mb-4"><a href="mailto:lilis.pse@gmail.com" class="btn btn-lg btn-accent w-100"><i class="bi bi-envelope"></i> Umpan Balik</a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    
+    <!-- Guide Section -->
 <section id="guide" class="splash-border">
   <div class="container">
-    <h2 class="accented-title text-center pt-4 pb-4"><span class="accent-text">Panduan</span></h2>
+    <h2 class="accented-title text-center pt-5 pb-4"><span class="accent-text">Panduan</span></h2>
     <div class="row justify-content-center">
       <div class="col-md-11">
         <div class="card pse mb-4">
@@ -188,9 +192,13 @@
 <!-- Location Section -->
 <section id="venue" class="splash-border">
   <div class="container pb-4">
-    <h2 class="accented-title text-center pt-4 pb-4"><span class="accent-text">Lokasi</span></h2>
-    <div class="ratio ratio-16x9">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.962613039783!2d106.8224091749897!3d-6.135725793851149!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f5f8a48d9379%3A0xab3d2a1560345216!2sPS%20Enterprise!5e0!3m2!1sen!2sus!4v1760865036391!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <h2 class="accented-title text-center pt-5 pb-4"><span class="accent-text">Lokasi</span></h2>
+    <div class="row">
+      <div class="col-md-11 mx-auto"> 
+        <div class="ratio ratio-16x9">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.962613039783!2d106.8224091749897!3d-6.135725793851149!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f5f8a48d9379%3A0xab3d2a1560345216!2sPS%20Enterprise!5e0!3m2!1sen!2sus!4v1760865036391!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
     </div>
   </div>
 </section>
