Nintendo Account Region Change Update

--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
             <h5 class="card-title">Switch</h5>
             <div class="row justify-content-center">
               <div class="col-md-6 mb-4"><a href="guide.html?guide=mario-kart-world-hk-redeem" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Switch 2 - Redeem Mario Kart HK</a></div>
-              <div class="col-md-6 mb-4"><a href="guide.html?guide=nintendo-account-setup" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Nintendo Account</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=nintendo-account-setup" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Membuat Nintendo Account</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=nintendo-account-change-region" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Ganti Region Nintendo Account</a></div>
               <div class="col-md-6 mb-4"><a href="guide.html?guide=nintendo-eshop-code-redeem" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> eShop Redeem Code</a></div>
               <div class="col-md-6 mb-4"><a href="guide.html?guide=joy-con-strap" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Joy-Con &amp; Strap</a></div>
               <div class="col-md-6 mb-4"><a href="guide.html?guide=joy-con-multiplayer-setup" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Joy-Con Multiplayer Setup</a></div>
