Added Campaign, reworded splash, added Google Tag.

--- a/guide.html
+++ b/guide.html
@@ -5,6 +5,16 @@
     <meta name="viewport"    content="width=device-width, initial-scale=1" />
     <meta name="author"      content="Perseonn Balthasaar" />
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G64SFGCX17"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-G64SFGCX17');
+    </script>
+
     <title>PS Enterprise Guides</title>
     <link rel="canonical"               href="https://psegameshop.github.io/help/" />
     <meta name="description"         content="PSe Help Center and FAQ page. Find answers to common questions about PS Enterprise services and support!">
@@ -30,6 +40,7 @@
     <meta name="twitter:title"       content="PS Enterprise Guides">
     <meta name="twitter:description" content="PSe Help Center and FAQ page. Find answers to common questions about PS Enterprise services and support!">
     <meta name="twitter:image"       content="https://psegameshop.github.io/help/assets/img/help-hero-banner.jpg">
+
   </head>
 
 <body data-bs-spy="scroll" data-bs-target="#navbarNav" data-bs-offset="80" tabindex="0">
@@ -51,7 +62,7 @@
 <!-- Guide Body Section -->
 <section id="guide" class="splash-border">
   <div class="container">
-     <div id="guide-container" class="guide-container text-body"> TEST</div>
+     <div id="guide-container" class="guide-container text-body"> Memuat...</div>
      <script>
     // --- Fetch and display guide dynamically ---
     async function loadGuide() {
