--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport"    content="width=device-width, initial-scale=1" />
     <meta name="author"      content="Perseonn Balthasaar" />
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G64SFGCX17"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-G64SFGCX17');
+    </script>
+
     <title>PS Enterprise Help Center</title>
     <link rel="canonical"               href="https://psegameshop.github.io/help/" />
     <meta name="description"         content="PSe Help Center and FAQ page. Find answers to common questions about PS Enterprise services and support!">
@@ -30,6 +40,7 @@
     <meta name="twitter:title"       content="PS Enterprise Help Center">
     <meta name="twitter:description" content="PSe Help Center and FAQ page. Find answers to common questions about PS Enterprise services and support!">
     <meta name="twitter:image"       content="https://psegameshop.github.io/help/assets/img/help-hero-banner.jpg">
+
   </head>
 
 <body data-bs-spy="scroll" data-bs-target="#navbarNav" data-bs-offset="80" tabindex="0">
@@ -40,7 +51,12 @@
     <ul class="navbar-nav flex-row">
       <li class="nav-item mx-3">
         <a class="nav-link text-center" href="#home">
-          <i class="bi bi-house"></i><span> Beranda</span>
+          <i class="bi bi-house-fill"></i><span> Beranda</span>
+        </a>
+      </li>
+      <li class="nav-item mx-3">
+        <a class="nav-link text-center" href="#campaign">
+          <i class="bi bi-megaphone-fill"></i><span> Campaign</span>
         </a>
       </li>
       <li class="nav-item mx-3">
@@ -50,12 +66,12 @@
       </li>
       <li class="nav-item mx-3">
         <a class="nav-link text-center" href="#guide">
-          <i class="bi bi-book"></i><span> Panduan</span>
+          <i class="bi bi-book-fill"></i><span> Panduan</span>
         </a>
       </li>
       <li class="nav-item mx-3">
         <a class="nav-link text-center" href="#venue">
-          <i class="bi bi-geo-alt"></i><span> Lokasi</span>
+          <i class="bi bi-geo-alt-fill"></i><span> Lokasi</span>
         </a>
       </li>
     </ul>
@@ -63,7 +79,7 @@
 </nav>
 
 <!-- Home Section -->
-<section id="home" class="splash-border position-relative overflow-hidden">
+<section id="home" class="splash-border">
   <!-- Background banner -->
   <div class="cover-bg"></div>
 
@@ -78,11 +94,27 @@
   <div class="cover-foreground">
     <!-- Text content -->
     <div class="container text-center pt-4 pb-4">
-      <h1 class="display-3 fw-bold">Kami Siap Membantu!</h1>
-      <p class="lead">Perlu bantuan? Tim support PS Enterpise siap membantu gamers!</p>
+      <h1 class="display-3 fw-bold">Butuh Bantuan? Kami Siap!</h1>
+      <p class="lead">Tim Support PS Enterprise hadir untuk menjawab semua pertanyaan gamers!</p>
     </div>
   </div>
 </section>
+<!-- Campaign Section -->
+<section id="campaign" class="splash-border">
+  <div class="container text-center pb-4">
+    <div class="row">
+      <div class="col-md-11 mx-auto">
+        <h2 class="accented-title text-center pt-5 pb-4"><span class="accent-text">Campaign</span></h2>
+        <div class="row justify-content-center">
+          <div class="col-md-6 mb-4"><a href="http://wa.me/6281380000246" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> Nawar bareng Mintendo! (11:00-18:00) </a></div>
+          <div class="col-md-6 mb-4"><a href="http://wa.me/6281383790033" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> Nawar bareng Minstation! (10:00 - 23:00) </a></div>
+          <div class="col-md-6 mb-4"><a href="http://wa.me/6287782217678" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> Nawar bareng Minbox! (11:00-18:00)</a></div>
+          <div class="col-md-6 mb-4"><a href="https://www.psegameshop.com/shop/?wpf_fbv=1&product_tag_8=sale" class="btn btn-lg btn-accent w-100"><i class="bi bi-globe"></i> Yang Lagi Diskon di psegameshop.com</a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
 <!-- Help Section -->
 <section id="help" class="splash-border">
@@ -96,7 +128,7 @@
           <div class="col-md-6 mb-4"><a href="https://wa.me/6281380000246" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> Sales</a></div>
           <div class="col-md-6 mb-4"><a href="https://wa.me/6287782217678" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> Tukar Tambah</a></div>
           <div class="col-md-6 mb-4"><a href="https://wa.me/62818835270" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> After Sales dan Garansi</a></div>
-          <div class="col-md-6 mb-4"><a href="https://wa.me/6281214000838" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> Service</a></div>
+          <div class="col-md-6 mb-4"><a href="https://wa.me/6281214000838" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> Repair Service</a></div>
           <div class="col-md-6 mb-4"><a href="https://wa.me/6281393488989" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> Admin psegameshop.com</a></div>
           <div class="col-md-6 mb-4"><a href="https://wa.me/62818633370" class="btn btn-lg btn-accent w-100"><i class="bi bi-whatsapp"></i> Admin Tokopedia</a></div>
           <div class="col-md-6 mb-4"><a href="https://discord.gg/PWBq8kp3MK" class="btn btn-lg btn-accent w-100"><i class="bi bi-discord"></i> Discord</a></div>
@@ -130,9 +162,9 @@
           <div class="card-body">
             <h5 class="card-title">Switch</h5>
             <div class="row justify-content-center">
-              <div class="col-md-6 mb-4"><a href="guide.html?guide=mario-kart-world-hk-redeem" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Switch 2 - Redeem Mario Kart HK</a></div>
               <div class="col-md-6 mb-4"><a href="guide.html?guide=nintendo-account-setup" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Membuat Nintendo Account</a></div>
               <div class="col-md-6 mb-4"><a href="guide.html?guide=nintendo-account-change-region" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Ganti Region Nintendo Account</a></div>
+              <div class="col-md-6 mb-4"><a href="guide.html?guide=mario-kart-world-hk-redeem" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Switch 2 - Redeem Mario Kart HK</a></div>
               <div class="col-md-6 mb-4"><a href="guide.html?guide=nintendo-eshop-code-redeem" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> eShop Redeem Code</a></div>
               <div class="col-md-6 mb-4"><a href="guide.html?guide=joy-con-strap" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Joy-Con &amp; Strap</a></div>
               <div class="col-md-6 mb-4"><a href="guide.html?guide=joy-con-multiplayer-setup" class="btn btn-lg btn-accent w-100"><img src="./assets/img/switch-logo-white.svg" alt="Switch Logo" class="console-icon"> Joy-Con Multiplayer Setup</a></div>
